<resources>
    <string name="app_name">NSE Tracker Nigeria</string>
    <string name="action_settings">Settings</string>


    <!--Buttons-->
    <string name="marketSnapshotButtonLabel">SNAPSHOT</string>
    <string name="gainersandLosersLabel">GAINERS LOSERS</string>
    <string name="viewAllEquitiesLabel">EQUITIES</string>
    <string name="companyDirectoryLabel">DIRECTORY</string>

    <string name="title_activity_main">MainActivity</string>

    <!--For MarketSnapshot Text-->
    <string name="allShareIndexTitle">ASI:</string>
    <string name="totalTradesTitle">Deals:</string>
    <string name="tradeValueTitle">Value:</string>
    <string name="tradeVolumeTitle">Volume:</string>
    <string name="marketCapTitle">Cap: </string>
    <string name="marketStatusTitle">Status: </string>

    <!--For GainersandLosersFragment Text-->
    <string name="gainersTextView">Gainers</string>
    <string name="losersTextView">Losers</string>


    <!--For Ads-->
    <string name="marketsnapshot_add_unit_id">ca-app-pub-1375868733132001/9955559774</string>
    <string name="gainersandlosers_add_unit_id">ca-app-pub-1375868733132001/2432292971</string>
    <string name="companyDetail_add_unit_id">ca-app-pub-1375868733132001/3909026172</string>


    <!--For EquitiesDialog Fragment-->
    <string name="marketlabel">Market</string>
    <string name="sectorlabel">Sector</string>
    <string name="title_activity_company_detail">CompanyDetailActivity</string>
</resources>
