<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_height="1dp"
        android:layout_weight="90"
        android:layout_width="match_parent"
        android:id="@+id/mainFragmentContainer"
        tools:ignore="Suspicious0dp"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="5dp"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="10"
        tools:ignore="Suspicious0dp"
        android:orientation="horizontal"
        style="@style/colorScheme"
        >

        <Button
            android:layout_height="match_parent"
            android:layout_width="0dp"
            style="@style/mainActivityButton"
            android:text="@string/marketSnapshotButtonLabel"
            android:id="@+id/marketSnapshotButton"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/mainActivityButton"
            android:text="@string/gainersandLosersLabel"
            android:id="@+id/gainersandLosersButton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/mainActivityButton"
            android:text="@string/viewAllEquitiesLabel"
            android:id="@+id/allEquitiesButton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/mainActivityButton"
            android:text="@string/companyDirectoryLabel"
            android:id="@+id/companyDirectoryButton"/>


        </LinearLayout>


    </LinearLayout>