<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context="com.stockwatch.nosagie.nsetracker.GainersandLosersFragment">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.ProgressBar.Small"
        android:id="@+id/gainersandLosersProgressBar"
        android:padding="4dp"
        tools:targetApi="lollipop"
        android:layout_gravity="center|center_horizontal|center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gainersloserserrorTextView"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp"
        android:gravity="center_horizontal"
        android:id="@+id/gainersAndLosersContent"
        >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:textSize="20sp"
                style="@style/marketSnapshotTitles"
                android:text="@string/gainersTextView"/>

            <ListView
                android:layout_weight="30"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/gainersListView"
              />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:textSize="20sp"
                style="@style/marketSnapshotTitles"
                android:text="@string/losersTextView"/>

            <ListView
                android:layout_weight="30"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/losersListView"
                />


            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_weight="40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="15dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/gainersandlosers_add_unit_id">
            </com.google.android.gms.ads.AdView>


    </LinearLayout>

</FrameLayout>
