<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nosagieapp.nsetracker.nsetrackernigeria.MarketSnapshotFragment">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.ProgressBar.Small"
        android:id="@+id/mrktSnapshotProgressBar"
        android:padding="4dp"
        tools:targetApi="lollipop"
        android:layout_gravity="center|center_horizontal|center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mrktSnapshotErrorTextView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mrktSnapshotContent"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="28"
            android:orientation="vertical"
           >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="5dp"
                android:text="@string/allShareIndexTitle"/>

            <TextView
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:id="@+id/allShareIndexTextView"
                android:padding="5dp"
                android:text="TEMP TEST"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="28"
            android:padding="4dp"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="50"
                android:gravity="center_horizontal"
                android:layout_height="match_parent"
                android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_weight="10"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/totalTradesTitle"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_weight="90"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:id="@+id/totalTradesTextView"
                        android:text="TEST TEXT"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="50"
                android:gravity="center_horizontal"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="10"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/tradeValueTitle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="90"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/tradeValueTextView"
                    android:text="TEST TEXT"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="28"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center_horizontal"
                android:text="@string/tradeVolumeTitle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tradeVolumeTextView"
                android:gravity="center_horizontal"
                android:layout_weight="90"
                android:text="TEST TEXT"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16"
            android:background="#000000"
            android:padding="0dp">
                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_add_unit_id">
                </com.google.android.gms.ads.AdView>
        </LinearLayout>


    </LinearLayout>

</FrameLayout>
